--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,17 +1,18 @@
 Package: getANCHOR
-Title: What the Package Does (One Line, Title Case)
+Title: Get ANCHOR'd
 Version: 0.0.0.9000
 Authors@R: 
-    person("First", "Last", , "first.last@example.com", role = c("aut", "cre"),
+    person("Chad", "Milando", , "cmilando@bu.edu", role = c("aut", "cre"),
            comment = c(ORCID = "YOUR-ORCID-ID"))
-Description: What the package does (one paragraph).
+Description: A Local BU SPH package for accessing the ANCHOR data-hub.
 License: `use_mit_license()`, `use_gpl3_license()` or friends to pick a
     license
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.2.3
 Imports:
-  rappdirs
+  rappdirs,
+  jsonlite
 Suggests: 
     knitr,
     rmarkdown
